k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bingo
  labels:
    name: bingo
    purpose: bingo-rules-engine
    environment: production
